--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Quaestio.org</string>
+    <string name="url_website">https://quaestio.org/</string>
 </resources>
